fix bug with grid on 768-1200, fix bug on firefox with img

--- a/src/components/Puzzle/puzzle.module.scss
+++ b/src/components/Puzzle/puzzle.module.scss
@@ -106,18 +106,10 @@
         }
 
         img {
-          width: 35%;
           height: unset;
           object-fit: cover;
         }
       }
-    }
-
-    &__firstCell {
-      grid-column-start: 1;
-      grid-column-end: 4;
-      grid-row-start: 1;
-      grid-row-end: 3;
     }
   }
 }
